--- a/elementary-app/src/components/NavBar.css
+++ b/elementary-app/src/components/NavBar.css
@@ -2,6 +2,8 @@
 * {
     margin: 0;
     padding: 0;
+    padding-left: 0;
+    margin-right: 0;
     box-sizing: border-box;
     
   }
@@ -19,24 +21,26 @@
     background-position: center;
     font-family: 'Nunito', sans-serif;
     margin: 0; /* Reset default margin */
-    
-
+    padding: 0; /* Reset default padding */
   }
   
   nav {
+    width: fit-content;
     background-color: white;
     width: 100%;
-
     box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
     height: 80px;
     align-items: center;
-    display: flex;
     justify-content: space-between;
+    padding: 0; 
+    margin: 0; 
+
   }
 
 
   
   nav ul {
+    
     list-style: none;
     display: flex;
     align-items: center;
